1743/api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - example.com
    port:
      name: http-api
      number: 80
      protocol: HTTP
  - hosts:
    - example.com
    port:
      name: https-api
      number: 443
      protocol: HTTPS
    tls:
      credentialName: api-gateway-tls
      mode: SIMPLE
